syntax="proto3";

package user;

// import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option go_package = "./;user";

// transactions
enum TransactionType {
    WITHDRAW = 0;
    DEPOSIT = 1;
}

message Transaction {
    int64 id = 1;
    int64 account_id = 2;
    double amount = 3;
    TransactionType transaction_type = 4;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message CreateTransactionRequest {
    int64 user_id = 1;
    int64 account_id = 2;
    double amount = 3;
    TransactionType transaction_type = 4;
}

message CreateTransactionResponse {
	Transaction transaction = 1;
}

message ListTransactionsRequest {
    int64 user_id = 1;
    int64 account_id = 2;
}

message ListTransactionsResponse {
    message Result {
        int64 id = 1;
        int64 account_id = 2;
        double amount = 3;
        string bank = 4;
        TransactionType transaction_type = 5;
        google.protobuf.Timestamp created_at = 10;
    }
    repeated Result transactions = 1;
}

message UpdateTransactionRequest {
    Transaction transaction = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateTransactionResponse {
	Transaction transaction = 1;
}

message DeleteTransactionRequest {
	string id = 1;
}

message DeleteTransactionResponse {
	string id = 1;
}